--- a/Offres.html
+++ b/Offres.html
@@ -77,6 +77,11 @@
             font-weight: 600;
         }
 
+        .card:hover i,
+        .card.active i {
+            color: var(--secondary);
+        }
+
         .content {
             visibility: hidden;
             height: 0;
@@ -88,6 +93,13 @@
                        -8px -8px 15px #ffffff;
             overflow: hidden;
             transition: height 0.4s ease-out, visibility 0.4s ease-out, padding 0.4s ease-out;
+            cursor: pointer;
+        }
+
+        .content:hover {
+            transform: translateY(-2px);
+            box-shadow: 10px 10px 18px #a3b1c6, 
+                       -10px -10px 18px #ffffff;
         }
 
         .content.active {
@@ -113,17 +125,6 @@
         .content p {
             line-height: 1.6;
             font-size: 1.05em;
-        }
-
-        .card[data-content="1"] { --theme: var(--accent1); }
-        .card[data-content="2"] { --theme: var(--secondary); }
-        .card[data-content="3"] { --theme: var(--primary); }
-        .card[data-content="4"] { --theme: var(--accent2); }
-        .card[data-content="5"] { --theme: var(--secondary); }
-
-        .card:hover i,
-        .card.active i {
-            color: var(--theme);
         }
 
         /* Responsive Design */
@@ -199,45 +200,45 @@
 <body>
     <div class="container">
         <div class="grid">
-            <div class="card" data-content="1" data-link="https://exemple.com/numerisation-3d">
+            <div class="card" data-content="1">
                 <i class="fas fa-cube"></i>
                 <h2>Numérisation 3D</h2>
             </div>
-            <div class="card" data-content="2" data-link="https://exemple.com/cartographie-web">
+            <div class="card" data-content="2">
                 <i class="fas fa-map-marked-alt"></i>
                 <h2>Cartographie web interactive</h2>
             </div>
-            <div class="card" data-content="3" data-link="https://exemple.com/analyse-satellitaire">
+            <div class="card" data-content="3">
                 <i class="fas fa-satellite"></i>
                 <h2>Analyse d'image satellitaire</h2>
             </div>
-            <div class="card" data-content="4" data-link="https://exemple.com/analyses-spatiales">
+            <div class="card" data-content="4">
                 <i class="fas fa-project-diagram"></i>
                 <h2>Analyses spatiales et modélisation</h2>
             </div>
-            <div class="card" data-content="5" data-link="https://exemple.com/sig">
+            <div class="card" data-content="5">
                 <i class="fas fa-layer-group"></i>
                 <h2>Systèmes d'information géographique</h2>
             </div>
         </div>
 
-        <div class="content" data-content="1">
+        <div class="content" data-content="1" data-link="https://exemple.com/numerisation-3d">
             <h3><i class="fas fa-cube"></i> Numérisation 3D</h3>
             <p>Technologies de scan 3D haute précision pour la modélisation d'environnements complexes.</p>
         </div>
-        <div class="content" data-content="2">
+        <div class="content" data-content="2" data-link="https://exemple.com/cartographie-web">
             <h3><i class="fas fa-map-marked-alt"></i> Cartographie web interactive</h3>
             <p>Solutions cartographiques dynamiques avec intégration de données en temps réel.</p>
         </div>
-        <div class="content" data-content="3">
+        <div class="content" data-content="3" data-link="https://exemple.com/analyse-satellitaire">
             <h3><i class="fas fa-satellite"></i> Analyse d'image satellitaire</h3>
             <p>Traitement avancé des données satellitaires pour l'observation et l'analyse terrestre.</p>
         </div>
-        <div class="content" data-content="4">
+        <div class="content" data-content="4" data-link="https://exemple.com/analyses-spatiales">
             <h3><i class="fas fa-project-diagram"></i> Analyses spatiales et modélisation</h3>
             <p>Outils prédictifs et simulations 3D pour l'aménagement territorial intelligent.</p>
         </div>
-        <div class="content" data-content="5">
+        <div class="content" data-content="5" data-link="https://exemple.com/sig">
             <h3><i class="fas fa-layer-group"></i> Systèmes d'information géographique</h3>
             <p>Plateformes intégrées de gestion et d'analyse de données géoréférencées.</p>
         </div>
@@ -257,15 +258,15 @@
             }
 
             cards.forEach(card => {
-                card.addEventListener('click', (e) => {
-                    // Afficher le contenu
+                card.addEventListener('click', () => {
                     activateContent(card.dataset.content);
-                    
-                    // Rediriger vers le lien si disponible
-                    if (card.dataset.link) {
-                        setTimeout(() => {
-                            window.location.href = card.dataset.link;
-                        }, 300);
+                });
+            });
+
+            contents.forEach(content => {
+                content.addEventListener('click', () => {
+                    if (content.dataset.link && content.classList.contains('active')) {
+                        window.location.href = content.dataset.link;
                     }
                 });
             });
