--- a/Offres.html
+++ b/Offres.html
@@ -17,7 +17,7 @@
 
         body {
             font-family: 'Book Antiqua', serif;
-            background: var(--background);
+            background: transparent;
             margin: 0;
             padding: 20px;
             color: var(--text);
@@ -32,7 +32,7 @@
         .grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 20px;
+            gap: 30px;
             padding: 15px;
         }
 
@@ -106,7 +106,7 @@
             visibility: visible;
             height: auto;
             padding: 30px;
-            margin-top: 20px;
+            margin-top: 30px;
         }
 
         .content h3 {
@@ -131,7 +131,7 @@
         @media (max-width: 768px) {
             .grid {
                 grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-                gap: 15px;
+                gap: 20px;
                 padding: 10px;
             }
 
@@ -153,6 +153,7 @@
             .content.active {
                 padding: 20px;
                 border-radius: 15px;
+                margin-top: 25px;
             }
 
             .content h3 {
@@ -175,7 +176,7 @@
 
             .grid {
                 grid-template-columns: 1fr;
-                gap: 12px;
+                gap: 15px;
             }
 
             .card {
@@ -193,6 +194,7 @@
 
             .content.active {
                 padding: 15px;
+                margin-top: 20px;
             }
         }
     </style>
