--- a/Offres.html
+++ b/Offres.html
@@ -43,8 +43,7 @@
             text-align: center;
             cursor: pointer;
             transition: all 0.3s ease;
-            box-shadow: 8px 8px 15px #a3b1c6, 
-                       -8px -8px 15px #ffffff;
+            box-shadow: none;
             min-height: 140px;
             display: flex;
             flex-direction: column;
@@ -54,13 +53,13 @@
 
         .card:hover {
             transform: translateY(-3px);
-            box-shadow: inset 8px 8px 15px #a3b1c6, 
-                       inset -8 -8px 15px #ffffff;
+            box-shadow: 8px 8px 15px #a3b1c6, 
+                       -8px -8px 15px #ffffff;
         }
 
         .card.active {
-            box-shadow: inset 8px 8px 15px #a3b1c6, 
-                       inset -8px -8px 15px #ffffff;
+            box-shadow: 8px 8px 15px #a3b1c6, 
+                       -8px -8px 15px #ffffff;
         }
 
         .card i {
@@ -89,11 +88,9 @@
             margin-top: 0;
             border-radius: 20px;
             background: var(--background);
-            box-shadow: 8px 8px 15px #a3b1c6, 
-                       -8px -8px 15px #ffffff;
+            box-shadow: none;
             overflow: hidden;
-            transition: height 0.4s ease-out, visibility 0.4s ease-out, padding 0.4s ease-out;
-            cursor: pointer;
+            transition: height 0.4s ease-out, visibility 0.4s ease-out, padding 0.4s ease-out, box-shadow 0.3s ease;
         }
 
         .content:hover {
@@ -107,6 +104,8 @@
             height: auto;
             padding: 30px;
             margin-top: 30px;
+            box-shadow: 8px 8px 15px #a3b1c6, 
+                       -8px -8px 15px #ffffff;
         }
 
         .content h3 {
@@ -125,6 +124,37 @@
         .content p {
             line-height: 1.6;
             font-size: 1.05em;
+            margin-bottom: 20px;
+        }
+
+        .btn-more {
+            display: inline-block;
+            padding: 12px 30px;
+            background: var(--background);
+            color: var(--primary);
+            text-decoration: none;
+            border-radius: 10px;
+            font-weight: 600;
+            transition: all 0.3s ease;
+            box-shadow: 5px 5px 10px #a3b1c6, 
+                       -5px -5px 10px #ffffff;
+            border: none;
+            cursor: pointer;
+            font-family: 'Book Antiqua', serif;
+            font-size: 1em;
+        }
+
+        .btn-more:hover {
+            transform: translateY(-2px);
+            box-shadow: 7px 7px 12px #a3b1c6, 
+                       -7px -7px 12px #ffffff;
+            color: var(--secondary);
+        }
+
+        .btn-more:active {
+            transform: translateY(0);
+            box-shadow: inset 3px 3px 6px #a3b1c6, 
+                       inset -3px -3px 6px #ffffff;
         }
 
         /* Responsive Design */
@@ -227,22 +257,27 @@
         <div class="content" data-content="1" data-link="https://exemple.com/numerisation-3d">
             <h3><i class="fas fa-cube"></i> Numérisation 3D</h3>
             <p>Technologies de scan 3D haute précision pour la modélisation d'environnements complexes.</p>
+            <button class="btn-more">En savoir plus</button>
         </div>
         <div class="content" data-content="2" data-link="https://exemple.com/cartographie-web">
             <h3><i class="fas fa-map-marked-alt"></i> Cartographie web interactive</h3>
             <p>Solutions cartographiques dynamiques avec intégration de données en temps réel.</p>
+            <button class="btn-more">En savoir plus</button>
         </div>
         <div class="content" data-content="3" data-link="https://exemple.com/analyse-satellitaire">
             <h3><i class="fas fa-satellite"></i> Analyse d'image satellitaire</h3>
             <p>Traitement avancé des données satellitaires pour l'observation et l'analyse terrestre.</p>
+            <button class="btn-more">En savoir plus</button>
         </div>
         <div class="content" data-content="4" data-link="https://exemple.com/analyses-spatiales">
             <h3><i class="fas fa-project-diagram"></i> Analyses spatiales et modélisation</h3>
             <p>Outils prédictifs et simulations 3D pour l'aménagement territorial intelligent.</p>
+            <button class="btn-more">En savoir plus</button>
         </div>
         <div class="content" data-content="5" data-link="https://exemple.com/sig">
             <h3><i class="fas fa-layer-group"></i> Systèmes d'information géographique</h3>
             <p>Plateformes intégrées de gestion et d'analyse de données géoréférencées.</p>
+            <button class="btn-more">En savoir plus</button>
         </div>
     </div>
 
@@ -265,9 +300,12 @@
                 });
             });
 
-            contents.forEach(content => {
-                content.addEventListener('click', () => {
-                    if (content.dataset.link && content.classList.contains('active')) {
+            // Gestionnaire pour les boutons "En savoir plus"
+            document.querySelectorAll('.btn-more').forEach(btn => {
+                btn.addEventListener('click', (e) => {
+                    e.stopPropagation();
+                    const content = btn.closest('.content');
+                    if (content && content.dataset.link) {
                         window.location.href = content.dataset.link;
                     }
                 });
