--- a/Offres.html
+++ b/Offres.html
@@ -246,27 +246,27 @@
             </div>
         </div>
 
-        <div class="content" data-content="1" data-link="https://exemple.com/numerisation-3d">
+        <div class="content" data-content="1" data-link="https://coulissa50.github.io/SiteConstrction/SiteConstruction.html">
             <h3><i class="fas fa-cube"></i> Numérisation 3D</h3>
             <p>Technologies de scan 3D haute précision pour la modélisation d'environnements complexes.</p>
             <button class="btn-more">En savoir plus</button>
         </div>
-        <div class="content" data-content="2" data-link="https://exemple.com/cartographie-web">
+        <div class="content" data-content="2" data-link="https://coulissa50.github.io/SiteConstrction/SiteConstruction.html">
             <h3><i class="fas fa-map-marked-alt"></i> Cartographie web interactive</h3>
             <p>Solutions cartographiques dynamiques avec intégration de données en temps réel.</p>
             <button class="btn-more">En savoir plus</button>
         </div>
-        <div class="content" data-content="3" data-link="https://exemple.com/analyse-satellitaire">
+        <div class="content" data-content="3" data-link="https://coulissa50.github.io/SiteConstrction/SiteConstruction.html">
             <h3><i class="fas fa-satellite"></i> Analyse d'image satellitaire</h3>
             <p>Traitement avancé des données satellitaires pour l'observation et l'analyse terrestre.</p>
             <button class="btn-more">En savoir plus</button>
         </div>
-        <div class="content" data-content="4" data-link="https://exemple.com/analyses-spatiales">
+        <div class="content" data-content="4" data-link="https://coulissa50.github.io/SiteConstrction/SiteConstruction.html">
             <h3><i class="fas fa-project-diagram"></i> Analyses spatiales et modélisation</h3>
             <p>Outils prédictifs et simulations 3D pour l'aménagement territorial intelligent.</p>
             <button class="btn-more">En savoir plus</button>
         </div>
-        <div class="content" data-content="5" data-link="https://exemple.com/sig">
+        <div class="content" data-content="5" data-link="https://coulissa50.github.io/SiteConstrction/SiteConstruction.html">
             <h3><i class="fas fa-layer-group"></i> Systèmes d'information géographique</h3>
             <p>Plateformes intégrées de gestion et d'analyse de données géoréférencées.</p>
             <button class="btn-more">En savoir plus</button>
